--- a/index.html
+++ b/index.html
@@ -29,27 +29,14 @@
           </div>
           <nav class="col-8">
             <ul>
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">О нас</a></li>
+              <li><a href="#">Услуги</a></li>
               <li>
-                <a href="#">Главная</a>
-              </li>
-              <li>
-                <a href="#">О нас</a>
-              </li>
-              <li>
-                <a href="#">Услуги</a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fa-solid fa-user"></i>
-                  Кабинет
-                </a>
+                <a href="#"><i class="icon fa-solid fa-user"></i>Кабинет</a>
                 <ul>
-                  <li>
-                    <a href="#">Админ панель</a>
-                  </li>
-                  <li>
-                    <a href="#">Выход</a>
-                  </li>
+                  <li><a href="#">Админ панель</a></li>
+                  <li><a href="#">Выход</a></li>
                 </ul>
               </li>
             </ul>
@@ -57,6 +44,80 @@
         </div>
       </div>
     </header>
+
+    <!-- carousel  -->
+    <div class="container">
+      <div class="row">
+        <h2 class="slider-title">Топ публикации</h2>
+      </div>
+      <div
+        id="carouselExampleCaptions"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner h-100">
+          <div class="carousel-item active">
+            <img
+              src="/images/carousel-1.jpg"
+              class="slider-img d-block w-100 h-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="slide-label"><a href="#">First slide label</a></h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="/images/carousel-2.jpg"
+              class="slider-img d-block w-100 h-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="slide-label"><a href="#">Second slide label</a></h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="/images/carousel-3.jpg"
+              class="slider-img d-block w-100 h-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="slide-label"><a href="#">Third slide label</a></h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="/images/carousel-4.jpg"
+              class="slider-img d-block w-100 h-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="slide-label"><a href="#">Forths slide label</a></h5>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/385654ba58.js"
       crossorigin="anonymous"
