--- a/index.html
+++ b/index.html
@@ -206,6 +206,79 @@
       </div>
     </div>
 
+    <!-- footer -->
+    <footer class="footer container-fluid">
+      <div class="footer-content container">
+        <div class="row">
+          <div class="footer-section about col-12 col-md-4">
+            <h3 class="footer-title">Мой блог</h3>
+            <p class="footer-text">
+              Мой блог - это приложение, созданное с целью научиться созданию
+              динамических сайтов с помощью JavaScript и PHP.
+            </p>
+            <div class="contacts">
+              <span class="contacts-item"
+                ><i class="fas fa-phone"></i>&nbsp; 123-456-678</span
+              >
+              <span class="contacts-item"
+                ><i class="fas fa-envelope"></i>&nbsp; info@myblog.com</span
+              >
+            </div>
+            <div class="socials">
+              <a class="socials-item" href="#"
+                ><i class="fa fa-facebook"></i
+              ></a>
+              <a class="socials-item" href="#"
+                ><i class="fa fa-instagram"></i
+              ></a>
+              <a class="socials-item" href="#"><i class="fa fa-twitter"></i></a>
+              <a class="socials-item" href="#"><i class="fa fa-youtube"></i></a>
+            </div>
+          </div>
+
+          <div class="footer-section links col-12 col-md-4">
+            <h3 class="footer-title">Ссылки</h3>
+            <ul class="links-list">
+              <li class="links-item">
+                <a class="links-item__link" href="#">События</a>
+              </li>
+              <li class="links-item">
+                <a class="links-item__link" href="#">Команда</a>
+              </li>
+              <li class="links-item">
+                <a class="links-item__link" href="#">Управление</a>
+              </li>
+              <li class="links-item">
+                <a class="links-item__link" href="#">Галлерея</a>
+              </li>
+              <li class="links-item">
+                <a class="links-item__link" href="#">Что-то еще</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-section contact-form col-12 col-md-4">
+            <h3 class="footer-title">Обратная связь</h3>
+            <form action="#">
+              <input
+                class="text-input contact-input"
+                type="email"
+                placeholder="Your email"
+              />
+              <textarea
+                class="text-input contact-input"
+                placeholder="Your message..."
+              ></textarea>
+              <button class="btn btn-big contact-btn" type="submit">
+                Отправить
+              </button>
+            </form>
+          </div>
+        </div>
+        <div class="footer-bottom">&copy; dimonstr223</div>
+      </div>
+    </footer>
+
     <!-- scripts -->
     <script
       src="https://kit.fontawesome.com/385654ba58.js"
